# stack-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
stack_gen/: main.py
