[tool.poetry]
name = "stack-generator"
version = "0.1.0"
description = ""
authors = ["Valdo NEGOU <valdonegou77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
setuptools = "^70.0.0"
wheel = "^0.43.0"
pip = "^24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
